[gd_scene load_steps=34 format=2]

[ext_resource path="res://src/blocks/branch_block.gd" type="Script" id=1]
[ext_resource path="res://sprites/dialogue/ninepatch2.png" type="Texture" id=2]
[ext_resource path="res://sprites/icons/unfilled_circle_thick.png" type="Texture" id=3]
[ext_resource path="res://themes/default_theme.tres" type="Theme" id=4]
[ext_resource path="res://fonts/UI_20.tres" type="DynamicFont" id=5]
[ext_resource path="res://sprites/icons/trash_small.png" type="Texture" id=6]
[ext_resource path="res://sprites/icons/trash_open_small.png" type="Texture" id=7]
[ext_resource path="res://src/title_bar_button_hover.gd" type="Script" id=8]
[ext_resource path="res://sprites/dialogue/advdialoguebox.png" type="Texture" id=9]
[ext_resource path="res://fonts/serif_dialogue_bolditalic.tres" type="DynamicFont" id=10]
[ext_resource path="res://fonts/serif_dialogue_italic.tres" type="DynamicFont" id=11]
[ext_resource path="res://fonts/serif_dialogue_bold.tres" type="DynamicFont" id=12]
[ext_resource path="res://fonts/serif_dialogue.tres" type="DynamicFont" id=13]
[ext_resource path="res://fonts/serif_char_bold.tres" type="DynamicFont" id=14]
[ext_resource path="res://fonts/hack_largeish.tres" type="DynamicFont" id=15]
[ext_resource path="res://sprites/icons/connector_small_unfilled.png" type="Texture" id=16]
[ext_resource path="res://fonts/UI_18.tres" type="DynamicFont" id=17]
[ext_resource path="res://fonts/hack_20.tres" type="DynamicFont" id=18]
[ext_resource path="res://sprites/icons/connector_small.png" type="Texture" id=19]
[ext_resource path="res://snd/boop.ogg" type="AudioStream" id=20]
[ext_resource path="res://src/random_pitch_sound.gd" type="Script" id=21]
[ext_resource path="res://src/blocks/branch_block_line_draw.gd" type="Script" id=22]


[sub_resource type="StyleBoxEmpty" id=1]

[sub_resource type="StyleBoxEmpty" id=2]

[sub_resource type="StyleBoxEmpty" id=3]

[sub_resource type="StyleBoxEmpty" id=4]

[sub_resource type="StyleBoxEmpty" id=5]

[sub_resource type="StyleBoxEmpty" id=6]

[sub_resource type="Theme" id=7]
default_font = ExtResource( 17 )
LineEdit/colors/clear_button_color = Color( 0.878431, 0.878431, 0.878431, 1 )
LineEdit/colors/clear_button_color_pressed = Color( 1, 1, 1, 1 )
LineEdit/colors/cursor_color = Color( 0.941176, 0.941176, 0.941176, 1 )
LineEdit/colors/font_color = Color( 0.878431, 0.878431, 0.878431, 1 )
LineEdit/colors/font_color_selected = Color( 0, 0, 0, 1 )
LineEdit/colors/selection_color = Color( 0.490196, 0.490196, 0.490196, 1 )
LineEdit/constants/minimum_spaces = 6
LineEdit/fonts/font = null
LineEdit/icons/clear = null
LineEdit/styles/focus = null
LineEdit/styles/normal = SubResource( 6 )
LineEdit/styles/read_only = null
SpinBox/icons/updown = null

[sub_resource type="Animation" id=8]
length = 0.3
step = 0.01
tracks/0/type = "value"
tracks/0/path = NodePath("NinePatchRect:modulate")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 1, 0, 0.00392157, 0 ) ]
}

[sub_resource type="Animation" id=9]
step = 0.01
tracks/0/type = "value"
tracks/0/path = NodePath("NinePatchRect:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( -0.0999999, 7.45058e-009, 0.05, 0.1 ),
"transitions": PoolRealArray( 1.6245, 1, 1.7411, 9.84916 ),
"update": 0,
"values": [ Color( 87.22, 79.89, 93.88, 1 ), Color( 4, 4, 4, 1 ), Color( 2, 2, 2, 1 ), Color( 1, 1, 1, 1 ) ]
}

[sub_resource type="RectangleShape2D" id=10]
extents = Vector2( 341.65, 67.4807 )

[sub_resource type="RectangleShape2D" id=11]
extents = Vector2( 21.0916, 17.0142 )

[node name="BranchBlock" type="Control" groups=[
"dialogue_block",
]]
use_parent_material = true
script = ExtResource( 1 )
node_type = 4

[node name="NinePatchRect" type="NinePatchRect" parent="."]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -343.0
margin_right = 345.0
margin_bottom = 128.0
rect_clip_content = true
focus_mode = 1
mouse_filter = 1
size_flags_vertical = 3
texture = ExtResource( 2 )
region_rect = Rect2( 0, -1, 256, 257 )
patch_margin_left = 64
patch_margin_top = 64
patch_margin_right = 64
patch_margin_bottom = 64

[node name="TitleBar" type="Control" parent="NinePatchRect"]
anchor_right = 1.0

[node name="HeadConnector" type="TextureButton" parent="NinePatchRect/TitleBar"]
modulate = Color( 0.333333, 0.333333, 0.333333, 1 )
anchor_left = 0.5
anchor_right = 0.5
margin_left = -12.0
margin_top = 5.0
margin_right = 8.0
margin_bottom = 25.0
mouse_filter = 2
disabled = true
texture_normal = ExtResource( 3 )
expand = true

[node name="DraggableSegment" type="Button" parent="NinePatchRect/TitleBar"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_bottom = 35.0
focus_mode = 0
theme = ExtResource( 4 )
custom_styles/focus = SubResource( 1 )
action_mode = 0
enabled_focus_mode = 0
flat = true

[node name="Id_Label" type="LineEdit" parent="NinePatchRect/TitleBar"]
margin_left = 7.0
margin_top = 1.0
margin_right = 129.0
margin_bottom = 26.0
focus_mode = 1
theme = ExtResource( 4 )
custom_styles/focus = SubResource( 2 )
custom_styles/normal = SubResource( 3 )
custom_fonts/font = ExtResource( 5 )
custom_colors/font_color = Color( 0.639216, 0.639216, 0.639216, 1 )
max_length = 10
expand_to_text_length = true
focus_mode = 1
context_menu_enabled = false
placeholder_text = "ID"
caret_blink = true

[node name="DeleteButton" type="TextureButton" parent="NinePatchRect"]
modulate = Color( 0.639216, 0.639216, 0.639216, 1 )
anchor_left = 1.0
anchor_right = 1.0
margin_left = -28.0
margin_top = 3.0
margin_right = -4.0
margin_bottom = 27.0
focus_mode = 0
enabled_focus_mode = 0
texture_normal = ExtResource( 6 )
texture_pressed = ExtResource( 7 )
texture_hover = ExtResource( 6 )
expand = true
script = ExtResource( 8 )

[node name="Dialogue" type="Control" parent="NinePatchRect"]
editor/display_folded = true
visible = false
anchor_left = 0.5
anchor_right = 0.5
margin_left = -158.0
margin_top = 37.0
margin_right = 158.0
margin_bottom = 147.0

[node name="DialogueBoxSprite" type="Sprite" parent="NinePatchRect/Dialogue"]
visible = false
position = Vector2( 156, 110.818 )
scale = Vector2( 0.476024, 0.476024 )
texture = ExtResource( 9 )

[node name="DialogueRichTextLabel" type="RichTextLabel" parent="NinePatchRect/Dialogue"]
visible = false
margin_left = -183.0
margin_top = 60.0
margin_right = 1221.0
margin_bottom = 359.0
rect_clip_content = false
mouse_filter = 1
custom_fonts/bold_italics_font = ExtResource( 10 )
custom_fonts/italics_font = ExtResource( 11 )
custom_fonts/bold_font = ExtResource( 12 )
custom_fonts/normal_font = ExtResource( 13 )
bbcode_enabled = true
scroll_active = false

[node name="CharacterLineEdit" type="LineEdit" parent="NinePatchRect/Dialogue"]
visible = false
margin_left = -201.0
margin_top = 9.0
margin_right = 77.0
margin_bottom = 73.0
focus_next = NodePath("../../../DialogueTextEdit")
custom_styles/focus = SubResource( 4 )
custom_styles/normal = SubResource( 5 )
custom_fonts/font = ExtResource( 14 )
align = 1
max_length = 20
expand_to_text_length = true
context_menu_enabled = false
caret_blink = true

[node name="DialogueTextEdit" type="TextEdit" parent="NinePatchRect"]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 12.0
margin_top = 266.0
margin_right = -13.0
margin_bottom = -40.0
focus_mode = 1
mouse_default_cursor_shape = 0
size_flags_horizontal = 0
size_flags_vertical = 0
theme = ExtResource( 4 )
custom_fonts/font = ExtResource( 15 )
custom_constants/line_spacing = 0
context_menu_enabled = false
wrap_enabled = true
caret_blink = true

[node name="TailConnector" type="TextureButton" parent="NinePatchRect"]
visible = false
modulate = Color( 1, 1, 1, 0.321569 )
margin_left = 367.0
margin_top = 320.0
margin_right = 403.0
margin_bottom = 345.0
mouse_filter = 2
disabled = true
action_mode = 0
button_mask = 0
enabled_focus_mode = 0
texture_normal = ExtResource( 16 )
expand = true
stretch_mode = 5

[node name="TailCountHSlider" type="SpinBox" parent="NinePatchRect"]
anchor_left = 1.0
anchor_right = 1.0
margin_left = -89.0
margin_top = 3.0
margin_right = -43.0
margin_bottom = 29.0
rect_clip_content = true
theme = SubResource( 7 )
min_value = 2.0
max_value = 6.0
value = 2.0
rounded = true
align = 1

[node name="BGRect" type="ColorRect" parent="NinePatchRect/TailCountHSlider"]
show_behind_parent = true
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2
color = Color( 0, 0, 0, 0.329412 )

[node name="Choices" type="GridContainer" parent="NinePatchRect"]
editor/display_folded = true
anchor_right = 1.0
margin_left = 3.0
margin_top = 68.0
margin_right = -7.0
margin_bottom = 228.0
grow_horizontal = 2
size_flags_horizontal = 0
size_flags_vertical = 0
custom_constants/vseparation = 70
columns = 2

[node name="0" type="Control" parent="NinePatchRect/Choices"]
margin_right = 337.0
grow_horizontal = 2
size_flags_horizontal = 3

[node name="LineEdit" type="LineEdit" parent="NinePatchRect/Choices/0"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -150.0
margin_top = -16.5
margin_right = 150.0
margin_bottom = 16.5
size_flags_horizontal = 0
size_flags_vertical = 0
theme = ExtResource( 4 )
custom_fonts/font = ExtResource( 18 )
custom_colors/font_color = Color( 0, 0.75, 1, 1 )
context_menu_enabled = false
clear_button_enabled = true
placeholder_text = "Choice #0"
placeholder_alpha = 0.3
caret_blink = true

[node name="1" type="Control" parent="NinePatchRect/Choices"]
margin_left = 341.0
margin_right = 678.0
grow_horizontal = 2
size_flags_horizontal = 3

[node name="LineEdit" type="LineEdit" parent="NinePatchRect/Choices/1"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -150.0
margin_top = -17.0
margin_right = 150.0
margin_bottom = 16.0
size_flags_horizontal = 0
size_flags_vertical = 0
theme = ExtResource( 4 )
custom_fonts/font = ExtResource( 18 )
custom_colors/font_color = Color( 1, 0.485714, 0, 1 )
context_menu_enabled = false
clear_button_enabled = true
placeholder_text = "Choice #1"
placeholder_alpha = 0.3
caret_blink = true

[node name="2" type="Control" parent="NinePatchRect/Choices"]
margin_top = 70.0
margin_right = 337.0
margin_bottom = 70.0
grow_horizontal = 2
size_flags_horizontal = 3

[node name="LineEdit" type="LineEdit" parent="NinePatchRect/Choices/2"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -150.0
margin_top = -16.5
margin_right = 150.0
margin_bottom = 16.5
size_flags_horizontal = 0
size_flags_vertical = 0
theme = ExtResource( 4 )
custom_fonts/font = ExtResource( 18 )
custom_colors/font_color = Color( 0, 1, 0.0512822, 1 )
context_menu_enabled = false
clear_button_enabled = true
placeholder_text = "Choice #2"
placeholder_alpha = 0.3
caret_blink = true

[node name="3" type="Control" parent="NinePatchRect/Choices"]
margin_left = 341.0
margin_top = 70.0
margin_right = 678.0
margin_bottom = 70.0
grow_horizontal = 2
size_flags_horizontal = 3

[node name="LineEdit" type="LineEdit" parent="NinePatchRect/Choices/3"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -150.0
margin_top = -16.5
margin_right = 150.0
margin_bottom = 16.5
size_flags_horizontal = 0
size_flags_vertical = 0
theme = ExtResource( 4 )
custom_fonts/font = ExtResource( 18 )
custom_colors/font_color = Color( 0.958904, 1, 0, 1 )
context_menu_enabled = false
clear_button_enabled = true
placeholder_text = "Choice #3"
placeholder_alpha = 0.3
caret_blink = true

[node name="4" type="Control" parent="NinePatchRect/Choices"]
margin_top = 140.0
margin_right = 337.0
margin_bottom = 140.0
grow_horizontal = 2
size_flags_horizontal = 3

[node name="LineEdit" type="LineEdit" parent="NinePatchRect/Choices/4"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -150.0
margin_top = -17.0
margin_right = 150.0
margin_bottom = 16.0
size_flags_horizontal = 0
size_flags_vertical = 0
theme = ExtResource( 4 )
custom_fonts/font = ExtResource( 18 )
custom_colors/font_color = Color( 0.802198, 0, 1, 1 )
context_menu_enabled = false
clear_button_enabled = true
placeholder_text = "Choice #4"
placeholder_alpha = 0.3
caret_blink = true

[node name="5" type="Control" parent="NinePatchRect/Choices"]
margin_left = 341.0
margin_top = 140.0
margin_right = 678.0
margin_bottom = 140.0
grow_horizontal = 2
size_flags_horizontal = 3

[node name="LineEdit" type="LineEdit" parent="NinePatchRect/Choices/5"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -150.0
margin_top = -16.5
margin_right = 150.0
margin_bottom = 16.5
size_flags_horizontal = 0
size_flags_vertical = 0
theme = ExtResource( 4 )
custom_fonts/font = ExtResource( 18 )
custom_colors/font_color = Color( 1, 0, 0.102564, 1 )
context_menu_enabled = false
clear_button_enabled = true
placeholder_text = "Choice #5"
placeholder_alpha = 0.3
caret_blink = true

[node name="Tails" type="HBoxContainer" parent="NinePatchRect"]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -356.0
margin_top = -30.0
margin_right = 354.0
margin_bottom = -4.0
grow_horizontal = 2
mouse_filter = 2
custom_constants/separation = 10
alignment = 1

[node name="0" type="Control" parent="NinePatchRect/Tails"]
modulate = Color( 0, 0.814286, 1, 1 )
margin_right = 110.0
margin_bottom = 26.0
grow_horizontal = 2
rect_clip_content = true
mouse_filter = 2
size_flags_horizontal = 3

[node name="TailConnector" type="TextureButton" parent="NinePatchRect/Tails/0"]
modulate = Color( 1, 1, 1, 0.321569 )
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -18.0
margin_top = -13.0
margin_right = 18.0
margin_bottom = 12.0
focus_mode = 1
mouse_filter = 1
action_mode = 0
enabled_focus_mode = 1
texture_normal = ExtResource( 16 )
texture_pressed = ExtResource( 19 )
expand = true
stretch_mode = 5

[node name="1" type="Control" parent="NinePatchRect/Tails"]
modulate = Color( 1, 0.513726, 0, 1 )
margin_left = 120.0
margin_right = 230.0
margin_bottom = 26.0
grow_horizontal = 2
rect_clip_content = true
mouse_filter = 2
size_flags_horizontal = 3

[node name="TailConnector" type="TextureButton" parent="NinePatchRect/Tails/1"]
modulate = Color( 1, 1, 1, 0.321569 )
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -18.0
margin_top = -13.0
margin_right = 18.0
margin_bottom = 12.0
focus_mode = 1
mouse_filter = 1
action_mode = 0
enabled_focus_mode = 1
texture_normal = ExtResource( 16 )
texture_pressed = ExtResource( 19 )
expand = true
stretch_mode = 5

[node name="2" type="Control" parent="NinePatchRect/Tails"]
modulate = Color( 0.101961, 1, 0, 1 )
margin_left = 240.0
margin_right = 350.0
margin_bottom = 26.0
grow_horizontal = 2
rect_clip_content = true
mouse_filter = 2
size_flags_horizontal = 3

[node name="TailConnector" type="TextureButton" parent="NinePatchRect/Tails/2"]
modulate = Color( 1, 1, 1, 0.321569 )
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -18.0
margin_top = -13.0
margin_right = 18.0
margin_bottom = 12.0
focus_mode = 1
mouse_filter = 1
action_mode = 0
enabled_focus_mode = 1
texture_normal = ExtResource( 16 )
texture_pressed = ExtResource( 19 )
expand = true
stretch_mode = 5

[node name="3" type="Control" parent="NinePatchRect/Tails"]
modulate = Color( 1, 0.984314, 0, 1 )
margin_left = 360.0
margin_right = 470.0
margin_bottom = 26.0
grow_horizontal = 2
rect_clip_content = true
mouse_filter = 2
size_flags_horizontal = 3

[node name="TailConnector" type="TextureButton" parent="NinePatchRect/Tails/3"]
modulate = Color( 1, 1, 1, 0.321569 )
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -18.0
margin_top = -13.0
margin_right = 18.0
margin_bottom = 12.0
focus_mode = 1
mouse_filter = 1
action_mode = 0
enabled_focus_mode = 1
texture_normal = ExtResource( 16 )
texture_pressed = ExtResource( 19 )
expand = true
stretch_mode = 5

[node name="4" type="Control" parent="NinePatchRect/Tails"]
modulate = Color( 0.945098, 0, 1, 1 )
margin_left = 480.0
margin_right = 590.0
margin_bottom = 26.0
grow_horizontal = 2
rect_clip_content = true
mouse_filter = 2
size_flags_horizontal = 3

[node name="TailConnector" type="TextureButton" parent="NinePatchRect/Tails/4"]
modulate = Color( 1, 1, 1, 0.321569 )
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -18.0
margin_top = -13.0
margin_right = 18.0
margin_bottom = 12.0
focus_mode = 1
mouse_filter = 1
action_mode = 0
enabled_focus_mode = 1
texture_normal = ExtResource( 16 )
texture_pressed = ExtResource( 19 )
expand = true
stretch_mode = 5

[node name="5" type="Control" parent="NinePatchRect/Tails"]
modulate = Color( 1, 0, 0, 1 )
margin_left = 600.0
margin_right = 710.0
margin_bottom = 26.0
grow_horizontal = 2
rect_clip_content = true
mouse_filter = 2
size_flags_horizontal = 3

[node name="TailConnector" type="TextureButton" parent="NinePatchRect/Tails/5"]
modulate = Color( 1, 1, 1, 0.321569 )
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -18.0
margin_top = -13.0
margin_right = 18.0
margin_bottom = 12.0
focus_mode = 1
mouse_filter = 1
action_mode = 0
enabled_focus_mode = 1
texture_normal = ExtResource( 16 )
texture_pressed = ExtResource( 19 )
expand = true
stretch_mode = 5

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/kill = SubResource( 8 )
anims/spawn = SubResource( 9 )

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 20 )
autoplay = true
script = ExtResource( 21 )

[node name="Area2D" type="Area2D" parent="."]
position = Vector2( 0, 41.4524 )
input_pickable = false
monitoring = false
collision_layer = 32
collision_mask = 32

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
position = Vector2( 0, 27.2281 )
shape = SubResource( 10 )

[node name="LineDrawNode" type="Node2D" parent="."]
position = Vector2( 0, 310 )
z_index = 4
script = ExtResource( 22 )

[node name="HeadArea2D" type="Area2D" parent="."]
position = Vector2( -10, 7.626 )
priority = 13.0

[node name="CollisionShape2D" type="CollisionShape2D" parent="HeadArea2D"]
position = Vector2( 10.0826, 6.46904 )
shape = SubResource( 11 )

[connection signal="mouse_entered" from="NinePatchRect/TitleBar/HeadConnector" to="." method="_on_HeadConnector_mouse_entered"]
[connection signal="mouse_exited" from="NinePatchRect/TitleBar/HeadConnector" to="." method="_on_HeadConnector_mouse_exited"]
[connection signal="mouse_entered" from="NinePatchRect/TitleBar/DraggableSegment" to="." method="_on_DraggableSegment_mouse_entered"]
[connection signal="pressed" from="NinePatchRect/TitleBar/DraggableSegment" to="." method="_on_DraggableSegment_pressed"]
[connection signal="pressed" from="NinePatchRect/DeleteButton" to="." method="_on_DeleteButton_pressed"]
[connection signal="value_changed" from="NinePatchRect/TailCountHSlider" to="." method="_on_TailCountHSlider_value_changed"]
[connection signal="animation_finished" from="AnimationPlayer" to="." method="_on_AnimationPlayer_animation_finished"]
[connection signal="area_entered" from="HeadArea2D" to="." method="_on_HeadArea2D_area_entered"]
[connection signal="area_exited" from="HeadArea2D" to="." method="_on_HeadArea2D_area_exited"]
